<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_popmenu_sort"
    android:layout_width="88dp"
    android:layout_height="102dp"
    android:gravity="center_horizontal"
    android:background="@mipmap/bg_sort_type"
    android:paddingTop="6dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sort_type_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sort_type_new"
        android:textColor="#636579"
        android:textSize="12sp" />

    <View
        android:layout_width="88dp"
        android:layout_height="1dp"
        android:background="#EEEEEE" />

    <TextView
        android:id="@+id/tv_sort_type_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sort_type_hot"
        android:textColor="#636579"
        android:textSize="12sp" />

    <View
        android:layout_width="88dp"
        android:layout_height="1dp"
        android:background="#EEEEEE" />

    <TextView
        android:id="@+id/tv_sort_type_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sort_type_score"
        android:textColor="#636579"
        android:textSize="12sp" />

</LinearLayout>
