<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@mipmap/bg_main_tabs"
        android:gravity="center_vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="19dp"
        android:paddingBottom="0dp">

        <com.qsmaxmin.qsbase.common.widget.viewpager.PagerSlidingTabStrip
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="6dp"
            android:visibility="visible"
            app:psts_SelectedTextColor="@color/color_white"
            app:psts_TabBackground="@color/color_blue_green"
            app:psts_TextSize="13sp"
            app:psts_UnSelectedTextColor="@color/color_white" />

        <Button
            android:id="@+id/btn_search0"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_seacher" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_seacher" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_blue_green"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_70"
            android:paddingRight="@dimen/dp_70">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_tab_recommend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_tab_recommend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/recommend_title"
                        android:textColor="@color/color_accent"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_tab_rank"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_tab_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/rank_title"
                        android:textColor="@color/color_accent"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_tab_category"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_tab_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/category_title"
                        android:textColor="@color/color_accent"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/ll_tab_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <View
                    android:id="@+id/tab_line"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_2"
                    android:layout_centerHorizontal="true"
                    android:background="@color/color_accent" />

            </RelativeLayout>


        </RelativeLayout>
    </RelativeLayout>

    <com.qsmaxmin.qsbase.common.widget.viewpager.QsViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>


